--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,7 +61,7 @@ repos:
         args: [
             "-rn", # Only display messages
             "-sn", # Don't display the score
-            "--disable=C0114,C0115,C0116"  # Disable missing module/class docstrings
+            "--disable=C0114,C0115,C0116,R0903"  # Disable missing module/class docstrings
           ]
   # Static type checking
   - repo: https://github.com/pre-commit/mirrors-mypy
