--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,8 @@ mccabe==0.7.0 ; python_version >= "3.13" and python_version < "4.0" \
 nodeenv==1.9.1 ; python_version >= "3.13" and python_version < "4.0" \
     --hash=sha256:6ec12890a2dab7946721edbfbcd91f3319c6ccc9aec47be7c7e6b7011ee6645f \
     --hash=sha256:ba11c9782d29c27c70ffbdda2d7415098754709be8a7056d79a737cd901155c9
+phue==1.1 ; python_version >= "3.13" and python_version < "4.0" \
+    --hash=sha256:61facc991a2ead1d727df8513d06ce089033489b6dca09be093db24f7cdb8874
 platformdirs==4.3.6 ; python_version >= "3.13" and python_version < "4.0" \
     --hash=sha256:357fb2acbc885b0419afd3ce3ed34564c13c9b95c89360cd9563f73aa5e2b907 \
     --hash=sha256:73e575e1408ab8103900836b97580d5307456908a03e92031bab39e4554cc3fb
