--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,6 +38,7 @@ repos:
     rev: 5.12.0
     hooks:
       - id: isort
+        args: ["--profile", "black", "--filter-files"]
   # Format code in doc strings
   - repo: https://github.com/asottile/blacken-docs
     rev: v1.12.1
